Dodanie spring security, Formularz umożliwiający podanie poczatkowych parametrów lotu

--- a/Simulator/src/main/webapp/index.html
+++ b/Simulator/src/main/webapp/index.html
@@ -8,10 +8,17 @@
 
 <title>Symulator lotu</title>
 <link href="css/mainpage.css" rel="stylesheet" type="text/css" />
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+
+<script type="text/javascript" src="javascript/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="javascript/bootstrap.min.js"></script>
+<script type="text/javascript" src="javascript/canvasjs.min.js"></script>
 <script type="text/javascript" src="javascript/three/three.js"></script>
 <script type="text/javascript" src="javascript/simulator.js"></script>
-<script type="text/javascript" src="javascript/canvasjs.min.js"></script>
 <script type="text/javascript" src="javascript/plot.js"></script>
+<script type="text/javascript" src="javascript/serwerAJAX.js"></script>
+
 </head>
 <body>
 	<div id="view3d"></div>
@@ -89,9 +96,44 @@
 		</tbody>
 	</table>
 
-	<button onclick="init()">Start</button>
-	<button onclick="stop()">Stop</button>
+	
+	<form id="startDataForm" action="readStartData()" method="post">
+		<div id="startDataFormSet">
+			<div class="startDataFormFields">
+				<div class="form-group has-error">
+					<label class="control-label" for="posX">Pozycja X:</label>
+					<input id="posX" class="form-control" type="text">
+				</div>
+			 	<div class="form-group">
+					<label class="control-label" for="posY">Pozycja Y:</label>
+			    	<input id="posY" class="form-control" type="text">
+		    	</div>
+		    	<div class="form-group">
+			    	<label class="control-label" for="posZ">Pozycja Z:</label>
+			    	<input id="posZ" class="form-control" type="text">
+		    	</div>
+			</div>
+			
+			<div class="startDataFormFields">
+				<div class="form-group">
+					<label class="control-label" for="velX">Prędkość X:</label>
+					<input id="velX" class="form-control" type="text">
+				</div>
+				<div class="form-group">
+					<label class="control-label" for="velY">Prędkość Y:</label>
+			    	<input id="velY" class="form-control" type="text">
+		    	</div>
+		    	<div class="form-group">
+			    	<label class="control-label" for="velZ">Prędkość Z:</label>
+			    	<input id="velZ" class="form-control" type="text">
+		    	</div>
+			</div>
+		</div>
+	</form>
 
+
+	<button type="button" class="btn btn-success" onclick="init()">Start</button>
+	<button type="button" class="btn btn-danger" onclick="stop()">Stop</button>
 
 
 	<div id="plots">
@@ -101,8 +143,6 @@
 	   <div id="speedPlot">
 		</div>
 	</div>
-
-	
 
 	<script type="text/javascript">
 		
