Logika pobierania historii

--- a/Simulator/src/main/webapp/index.html
+++ b/Simulator/src/main/webapp/index.html
@@ -18,6 +18,7 @@
 <script type="text/javascript" src="javascript/bootstrapValidator.min.js"></script>
 <script type="text/javascript" src="javascript/canvasjs.min.js"></script>
 <script type="text/javascript" src="javascript/three/three.js"></script>
+<script type="text/javascript" src="javascript/globals.js"></script>
 <script type="text/javascript" src="javascript/simulator.js"></script>
 <script type="text/javascript" src="javascript/plot.js"></script>
 <script type="text/javascript" src="javascript/serwerAJAX.js"></script>
