--- a/Simulator/src/main/webapp/history.html
+++ b/Simulator/src/main/webapp/history.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta name="Author" content="Tomasz Straszewski"/>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="Author" content="Tomasz Straszewski"/>
 
-<title>Historia</title>
+		<title>Historia</title>
 
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
-<link href="css/bootstrapValidator.min.css" rel="stylesheet" type="text/css" />
+		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+		<link href="css/bootstrapValidator.min.css" rel="stylesheet" type="text/css" />
+		<link href="css/flyHistory.css" rel="stylesheet" type="text/css" />
 
-<script type="text/javascript" src="javascript/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="javascript/bootstrap.min.js"></script>
-<script type="text/javascript" src="javascript/serwerAJAX.js"></script>
-<script type="text/javascript" src="javascript/services.js"></script>
-<script type="text/javascript" src="javascript/historyPage.js"></script>
+		<script type="text/javascript" src="javascript/jquery-2.1.1.min.js"></script>
+		<script type="text/javascript" src="javascript/bootstrap.min.js"></script>
+		<script type="text/javascript" src="javascript/utils.js"></script>
+		<script type="text/javascript" src="javascript/serwerAJAX.js"></script>
+		<script type="text/javascript" src="javascript/services.js"></script>
+		<script type="text/javascript" src="javascript/moment.min.js"></script>
+		<script type="text/javascript" src="javascript/historyPage.js"></script>
 
+	</head>
 
-</head>
-
-<body onload="initHistoryPage()">
-	
-</body>
+	<body onload="initHistoryPage()">
+		<div class="table-responsive">
+			<table id="historyTable" class="table">
+				<caption>
+					Historia lotów
+				</caption>
+				<thead>
+					<tr>
+						<th>Data przelotu</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
+	</body>
 </html>
