Obsługa local storage, validacja po stronie serwera

--- a/Simulator/src/main/webapp/history.html
+++ b/Simulator/src/main/webapp/history.html
@@ -9,6 +9,7 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 		<link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
 		<link href="css/bootstrapValidator.min.css" rel="stylesheet" type="text/css" />
+		<link href="css/mainpage.css" rel="stylesheet" type="text/css" />
 		<link href="css/flyHistory.css" rel="stylesheet" type="text/css" />
 
 		<script type="text/javascript" src="javascript/jquery-2.1.1.min.js"></script>
@@ -22,6 +23,13 @@
 	</head>
 
 	<body onload="initHistoryPage()">
+		
+		<div class="nav-bar-div">
+			<ul class="nav nav-pills nav-bar">
+			  <li><a href="/Simulator/index.html">Home</a></li>
+			</ul>
+		</div>
+		
 		<div class="table-responsive">
 			<table id="historyTable" class="table">
 				<caption>
